force-app/main/default/objects/NDA__c/NDA__c.object-meta.xml
<CustomObject>
    <label>NDA</label>
    <nameField>
        <displayFormat>NDA-{0000}</displayFormat>
        <label>NDA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDAs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>