force-app/main/default/objects/NDA__c/fields/Counterparty_Name__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Name__c</fullName>
    <description>Name of the party signing the NDA on behalf of the broker or seller.</description>
    <label>Counterparty Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>